# Tengine

./: .gitignore  CMakeLists.txt  imilab.md  tengine.md
.github/workflows/: android-armv7-cpu.yml  android-armv8-cpu.yml  codeql-analysis.yml  linux-armv7-cpu-gcc.yml  linux-armv8-cpu-gcc.yml  linux-mips64-cpu-gcc.yml  linux-x64-cpu-clang.yml  linux-x64-cpu-gcc.yml  linux-x64-cpu-timvx-gcc.yml  linux-x64-cpu-tools-convert.yml  linux-x64-cpu-tools-quant.yml  test-coverage.yml  windows-x64-cpu-vs2017.yml  windows-x64-cpu-vs2019.yml  windows-x86-cpu-vs2017.yml  windows-x86-cpu-vs2019.yml
examples/: CMakeLists.txt  tm_hello_world.cpp  tm_mobilenet_ssd_.c  tm_retinaface_.cpp  tm_test_imread.cpp  tm_yolov3_.cpp  tm_yolov3_cv_.cpp  tm_yolov3_p4p5_.cpp  tm_yolov3_tiny_.cpp  tm_yolov5s.cpp  tm_yolov5s_.cpp  tm_yolov5s_cv.cpp  tm_yolov5s_cv_.cpp  tm_yolov5s_p3p4_.cpp  tm_yolov5s_tiny_.cpp  tm_yolov5s_uint8.cpp  tm_yolov5s_uint8_.cpp
examples/common/: tengine_operations.h
examples/imilab/: imi_imread.h  imi_utils_coco.h  imi_utils_common.hpp  imi_utils_elog.h  imi_utils_image.h  imi_utils_imread.h  imi_utils_object.hpp  imi_utils_sort.hpp  imi_utils_tm-inl.h  imi_utils_tm.h  imi_utils_tm_debug.h  imi_utils_tm_quant.h  imi_utils_types.hpp  imi_utils_visual.hpp  imi_utils_voc.h  imi_utils_yolov3.hpp  imi_utils_yolov5.hpp
imilab/: .gitignore  CMakeLists.txt  imilab.md  tm_hello_world.cpp  tm_mobilenet_ssd_.c  tm_nanodet_m_.cpp  tm_retinaface_.cpp  tm_test_imread.cpp  tm_yolov3_.cpp  tm_yolov3_cv_.cpp  tm_yolov3_p4p5_.cpp  tm_yolov3_tiny_.cpp  tm_yolov5s_.cpp  tm_yolov5s_cv_.cpp  tm_yolov5s_p3p4_.cpp  tm_yolov5s_tiny_.cpp  tm_yolov5s_uint8.cpp  tm_yolov5s_uint8_.cpp
imilab/doc/: imilab.md  tengine.md
imilab/utils/: imi_model_nanodet.hpp  imi_model_yolov3.hpp  imi_model_yolov5.hpp  imi_utils_coco.h  imi_utils_common.hpp  imi_utils_elog.h  imi_utils_image.h  imi_utils_object.hpp  imi_utils_tm-inl.h  imi_utils_tm.h  imi_utils_tm_debug.h  imi_utils_tm_quant.h  imi_utils_types.hpp  imi_utils_visual.hpp  imi_utils_voc.h  imi_utils_yolov3.hpp  imi_utils_yolov5.hpp
msvc/: msvc.sln
msvc/tengine/: .gitignore  tengine.vcxproj  tengine.vcxproj.filters
msvc/tm_retinaface/: tm_retinaface.vcxproj  tm_retinaface.vcxproj.filters
msvc/tm_yolov3/: tm_yolov3.vcxproj  tm_yolov3.vcxproj.filters
msvc/tm_yolov3_tiny/: tm_yolov3_tiny.vcxproj  tm_yolov3_tiny.vcxproj.filters
msvc/tm_yolov5s/: tm_yolov5s.vcxproj  tm_yolov5s.vcxproj.filters
msvc/tm_yolov5s_uint8/: tm_yolov5s_uint8.vcxproj  tm_yolov5s_uint8.vcxproj.filters
scripts/: tm_examples.rc  tm_examples.sh  tm_examples_300x300.sh  tm_examples_320x180.sh  tm_examples_loop.sh  tm_test.sh
tools/: Readme.md  split_dat.c
tools/optimize/: .gitignore  nanodet_m-opt.py  onnx_edit.py  yolov5s-opt.py  yolov5s-opt.v2.py  yolov5s_opt.py
tools/quantize/: .gitignore
